<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/splash_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/warning_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/icon_warning"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_heading"
            android:textSize="@dimen/_20ssp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_add_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sure_Logout"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/warning_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_review"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_yes_btn"
            android:layout_width="110dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/yes_Logout"
            android:textSize="@dimen/_15ssp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/tv_no_btn"
            android:layout_width="110dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/no_Logout"
            android:textSize="@dimen/_15ssp"
            android:textStyle="normal" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>