<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/splash_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviewHeading"
        android:fontFamily="@font/kgtenthousandreasonsalt"
        android:gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_write_review"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/et_background"
        android:hint="@string/reviewHint"
        android:fontFamily="@font/opensans_regular"
        android:gravity="top|start"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_submit_btn"
        android:layout_width="110dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/reviewDone"
        android:textSize="@dimen/_15ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_review" />

</android.support.constraint.ConstraintLayout>