<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:background="@drawable/lay_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

           <!-- <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:hint="@string/your_email"
                android:fontFamily="@font/kgtenthousandreasonsalt"
                android:textColorHint="@android:color/darker_gray">-->

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmails"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/your_email"
                    android:fontFamily="@font/opensans_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:textColorHint="@color/whiteColor"
                    android:textColor="@android:color/white" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <View
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@android:color/white" />

           <!-- <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:hint="@string/password"
                android:fontFamily="@font/kgtenthousandreasonsalt"
                android:textColorHint="@android:color/darker_gray">-->

                <EditText
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:id="@+id/etpassword"
                    android:hint="@string/password"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/opensans_regular"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/whiteColor"
                    android:textColor="@android:color/white" />

           <!-- </android.support.design.widget.TextInputLayout>-->

            <View
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/btDoneLogin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/kgtenthousandreasonsalt"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:text="@string/login_" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>